Fix button/bg contrast for custom chat dropdown.

--- a/src/App.css
+++ b/src/App.css
@@ -625,6 +625,11 @@ pre[class*=language-] {
   background-color: rgba(86, 88, 105, var(--tw-bg-opacity))
 }
 
+.dark .dark\:hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(86, 88, 105, var(--tw-bg-opacity))
+}
+
 .dark .dark\:bg-white\/10 {
   background-color: hsla(0, 0%, 100%, .1)
 }
@@ -742,7 +747,7 @@ pre[class*=language-] {
 
 .dark .dark\:hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgba(78, 79, 93, var(--tw-bg-opacity))
+  background-color: rgba(62, 59, 73, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-gray-800:hover {
